--- a/.github/workflows/renew.yml
+++ b/.github/workflows/renew.yml
@@ -3,7 +3,7 @@ name: 续订
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "0 0,8,16 * * *"
+    - cron: "0 1 */3 * *"
 env:
   USERNAME: ${{ secrets.USERNAME }}
   PASSWORD: ${{ secrets.PASSWORD }}
