--- a/.github/workflows/renew.yml
+++ b/.github/workflows/renew.yml
@@ -5,6 +5,7 @@ on:
   schedule:
     - cron: "0 1 */3 * *"
 env:
+  HOST: ${{ secrets.HOST }}
   USERNAME: ${{ secrets.USERNAME }}
   PASSWORD: ${{ secrets.PASSWORD }}
   APP_ID: ${{ secrets.APP_ID }}
