--- a/.github/workflows/renew.yml
+++ b/.github/workflows/renew.yml
@@ -3,7 +3,7 @@ name: 续订
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "30 8 */3 * *"
+    - cron: "30 8 */3 * 2,5"
 env:
   HOST: ${{ secrets.HOST }}
   USERNAME: ${{ secrets.USERNAME }}
@@ -34,7 +34,7 @@ jobs:
         run: |
           renewTime=$(cat renewTime)
           interval=$(( ($(date -d "now" +%s) - $(date -d "$renewTime" +%s))/(24*60*60) )) 2>&1 
-          if [ "$?" = 0 ] && [ $interval -ge 0 ] && [ $interval -lt 8 ]; then
+          if [ "$?" = 0 ] && [ $interval -gt 0 ] && [ $interval -lt 8 ]; then
             echo "check=success" >> $GITHUB_OUTPUT
           else
             echo "check=fail" >> $GITHUB_OUTPUT
