--- a/.github/workflows/renew.yml
+++ b/.github/workflows/renew.yml
@@ -3,7 +3,7 @@ name: 续订
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "30 8 */3 * 2,5"
+    - cron: "30 8 * * 2,5"
 env:
   HOST: ${{ secrets.HOST }}
   USERNAME: ${{ secrets.USERNAME }}
