--- a/.github/workflows/renewBak.yml
+++ b/.github/workflows/renewBak.yml
@@ -3,7 +3,7 @@ name: 续订wo
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "30 1 */3 * 1,4"
+    - cron: "30 1 * * 1,4"
 env:
   HOST: "woiden.id"
   USERNAME: ${{ secrets.USERNAME }}
